FIX: GStreamer-engine can now play vorbis radio streams properly, with full metadata support.

BUG: 89821
CCMAIL: amarok-devel@lists.sf.net

svn path=/trunk/kdeextragear-1/amarok/; revision=394153